--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,7 +1,11 @@
 .slapy
 {
-    margin-top: 250px;
+    margin-top: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media screen and (max-width: 576px){  
+        align-items: flex-start;
+    }
 }
